checkin for bug 76293.  Moves cache directory aside on startup if disk cache is unable to read or delete files.  Cache service disables disk cache device if it fails to initialize, and defaults to using memory cache instead. r=beard, sr=darin.